# aries-vcx

./: Cargo.toml  test_compile_android.sh
.github/actions/publish-android/: action.yml
.github/workflows/: main.yml
agency_client/: Cargo.toml
agency_client/src/: agency_client.rs  lib.rs
agency_client/src/internal/: messaging.rs
agency_client/src/utils/: encryption_envelope.rs
agency_client/src/wallet/: base_agency_client_wallet.rs
aries/aries_vcx/tests/: test_did_exchange.rs
aries_vcx/: Cargo.toml  genesis.txn
aries_vcx/src/: error.rs  lib.rs
aries_vcx/src/anoncreds/: base_anoncreds.rs  credx_anoncreds.rs  indy_anoncreds.rs  mod.rs
aries_vcx/src/global/: settings.rs
aries_vcx/src/indy/: anoncreds.rs  keys.rs  mod.rs  signing.rs  test_utils.rs  wallet.rs
aries_vcx/src/ledger/: base_ledger.rs  indy_ledger.rs  indy_vdr_ledger.rs  mod.rs
aries_vcx/src/libindy/: mod.rs
aries_vcx/src/plugins/: mod.rs
aries_vcx/tails/: 2wEaPskYBduXthjjN52j8j8VuvY6FSnPXCx2wAkkto76  5pF9BpsaXzBzEEUUKuhfXv1tx38TEnjgkFZEL5siyScA  8tQwqdp6hmSeAAopppPJNNqtkdENdnyxipakcME4Y1yQ  AXkCiNSJxo5cwpxKFG63phQxZYues4FoaDDbQyVDCWDh
aries_vcx/tests/: cred_def_json copy.json  cred_def_json.json  credx_retrieve_creds.json  indy_prover_get_creds.json  indy_retrieve_creds.json  temp_gm2_tests.rs  temp_gm_tests.rs  test_agency.rs  test_connection.rs  test_creds_proofs.rs  test_creds_proofs_revocations.rs  test_pool.rs  test_wallets.rs  vdr_prover_get_creds.json  yaya.json
aries_vcx_core/: Cargo.toml
indy_ledger_response_parser/: Cargo.toml
messages/: Cargo.toml
(+129 files in other folders)
