[package]
name = "indy-ledger-response-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = "=0.3.20"
# temporarily using fork, see: https://github.com/anonyome/indy-vdr/releases/tag/v000.400.001-dev.16
indy-vdr = { git = "https://github.com/anonyome/indy-vdr.git", tag = "v000.400.001-dev.16", default-features = false, features = ["log"] }
thiserror = "1.0.44"
anoncreds-clsignatures = "0.2.0"
